2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/BtHandshakeMessage.cc
	* src/BtHandshakeMessage.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/BtBitfieldMessageValidator.h
	* src/BtHandshakeMessageValidator.h
	* src/BtPieceMessageValidator.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/BtAbortOutstandingRequestEvent.h
	* src/BtCancelSendingPieceEvent.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variable
	* src/BitfieldMan.cc
	* src/BitfieldMan.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variable
	* src/AsyncNameResolver.cc
	* src/AsyncNameResolver.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variable
	* src/AnnounceList.cc
	* src/AnnounceList.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private. Added accessor funcs.
	* src/AbstractSingleDiskAdaptor.cc
	* src/AbstractSingleDiskAdaptor.h
	* src/DirectDiskAdaptor.cc
	* src/DirectDiskAdaptor.h
	* src/DiskAdaptor.cc
	* src/DiskAdaptor.h
	* src/MultiDiskAdaptor.cc
	* src/MultiDiskAdaptor.h
	* src/MultiFileAllocationIterator.cc
	* src/MultiFileAllocationIterator.h
	* test/BtBitfieldMessageTest.cc
	* test/BtHaveAllMessageTest.cc
	* test/BtHaveMessageTest.cc

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private. Added accessor funcs.
	* src/AbstractDiskWriter.cc
	* src/AbstractDiskWriter.h

2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private. Added accessor funcs.
	* src/AbstractAuthResolver.h
	* src/DefaultAuthResolver.cc
	* src/DefaultAuthResolver.h
	* src/NetrcAuthResolver.cc
	* src/NetrcAuthResolver.h
