@@ -1,6 +1,11 @@
 2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Renamed member variables
+	* src/BtRuntime.h
+
+2010-06-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Renamed member variables
 	* src/BtHandshakeMessage.cc
 	* src/BtHandshakeMessage.h
 
